--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,32 @@
 body {
-    
+    display: flex;
+    flex-direction: column;
+    background-color: #1F2937;
+    font-family: Roboto, sans-serif;
+}
+
+.header {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    background-color: #1F2937;
+    color: white;
+    font-weight: 800;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    font-weight: 200;
+    font-size: 12px;
+
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+    gap: 16px;
 }
