--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,12 @@ ul {
 }
 
 .awesome {
-    max-width: 450px;
+    max-width: 500px;
 }
 
 img.awesome {
-    height: 200px;
-    width: 450px;
+    height: 250px;
+    width: 500px;
     margin-left: 30px;
 }
 
@@ -83,6 +83,7 @@ button.awesome {
     align-items: center;
     background-color: white;
     padding-top: 30px;
+    padding-bottom: 60px;
 }
 
 h1.random {
@@ -112,6 +113,38 @@ p.random {
     justify-content: center;
     align-items: center;
     gap: 36px;
+    padding: 0;
+    margin: 0;
+}
+
+.container3 {
+    background-color: #E5E7EB;
+    justify-content: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.small-container2 {
+    display: flex;
+    flex-flow: column wrap;
+    max-width: 800px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+p.quote {
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    padding: 0;
+    margin: 0;
+}
+
+p.attribute {
+    font-size: 24px;
+    font-weight: 700;
+    align-self: flex-end;
     padding: 0;
     margin: 0;
 }
