--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
     background-color: #1F2937;
     font-family: Roboto, sans-serif;
     box-sizing: border-box;
+    margin: 0
 }
 
 .header {
@@ -14,6 +15,7 @@ body {
     color: white;
     font-weight: 800;
     font-size: 24px;
+    margin-top: 8px;
 }
 
 a {
@@ -147,4 +149,44 @@ p.attribute {
     align-self: flex-end;
     padding: 0;
     margin: 0;
+}
+
+.container4 {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+}
+
+.cta-container {
+    background-color: #3882F6;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    min-width: 1000px;
+    margin: 50px 80px;
+    gap: 0;
+}
+
+.cta-button {
+    align-self: center;
+}
+
+h1.cta {
+    font-size: 24px;
+    margin: 36px 0 0 0;
+}
+
+p.cta {
+    font-size: 18px;
+    margin: 0 0 36px 0; 
+}
+
+button.cta {
+    background-color: #3882F6;
+    border: white 2px solid;
+    color: white;
+    padding: 8px 24px;
+    border-radius: 6px;
 }
