--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
     background-color: #1F2937;
     font-family: Roboto, sans-serif;
     box-sizing: border-box;
-    margin: 0
+    margin: 0;
 }
 
 .header {
